<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hello_world_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1055311345@qq.com">vistar</maintainer>
  <license>TODO: License declaration</license>

  <!-- 构建依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 必须添加 -->
  <!-- 接口生成依赖 -->
  <build_depend>rosidl_default_generators</build_depend>
  <!-- 运行时依赖 -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <!-- 消息依赖（根据你使用的类型） -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  
  <!-- 必须的组 membership -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
